# kgateway

./: .custom-gcl.yml  .gitignore  .golangci.yaml  .goreleaser.yaml  AGENTS.md  BUILD.md  CODE-OF-CONDUCT.md  CODEOWNERS  Makefile  README.md  RELEASE.md  SECURITY.md  SECURITY_RESPONSE.md  THREAT_MODEL.md  Tiltfile  go.mod  go.sum  test_coverage.yml  tilt-settings.yaml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: CI-FLAKE.yml
.github/workflows/: README.md  auto-merge.yaml  automerge.yaml  build-tools.yaml  cache-eviction.yaml  check-labels.yaml  conformance-tests.yaml  conformance.yaml  devcontainer-smoke.yaml  e2e.yaml  labeler.yaml  lint.yaml  nightly-tests.yaml  pr-kind-labeler.yaml  pr-kubernetes-tests.yaml  pr-unit-tests.yaml  release.yaml  retest.yaml  static-analysis.yaml  unit.yaml  verify.yaml
api/: README.md
api/annotations/: gateway.go  policy.go
api/applyconfiguration/: utils.go
api/settings/: settings.go  settings_test.go
api/tests/: agentgateway_policy_test.go  cel_test.go  validator.go
api/v1alpha1/: agentgateway_backend_types.go  agentgateway_policy_types.go  ai_backend.go  ai_policy.go  backend_config_policy_types.go  backend_types.go  basic_auth_types.go  direct_response_types.go  doc.go  ext_auth_types.go  ext_proc_types.go  gateway_extensions_types.go  gateway_parameters_types.go  http_listener_policy_types.go  jwt_types.go  kube_types.go  listener_policy_types.go  mcp_backend.go  policy_types.go  rbac.go  shared_types.go  traffic_policy_types.go  zz_generated.deepcopy.go  zz_generated.register.go
cmd/envoyinit/: Dockerfile  main.go
cmd/kgateway/: Dockerfile  Dockerfile.agentgateway  main.go
cmd/sds/: Dockerfile
design/: 10411-gateway-api-inference-extension-support.md  10498.md  10553-support-leader-election.md  10553.md  10573-aws-lambda-integration.md  10574-basic-transformations-for-request-and-response.md  10625-invalid-route-replacement.md  10683-byo-extauth.md  10851-extension-ordering.md  10943.md  11177-ai-extensions-opentelemetry-tracing-support.md  11268-policy-application-and-merging.md  11466-weighted-http-route-precedence.md  11584.md  11741.md  11747-orphaned-resource-status-reporting.md  11818-kgateway-agentgateway-tracing-integration.md  12721-e2e-testing-with-gateway-api-versions.md  12909.md  12915.md  template.md
docs/guides/: oidc.md  (+3 more)
examples/: ai-backend-with-routes.yaml  ai-bedrock-with-prompt-caching.yaml  example-backendconfigpolicy-circuit-breakers.yaml  example-basic-auth-traffic-policy.yaml  example-gatewayparameters-stats-matcher.yaml  example-gw-with-http-listener-policy.yaml  example-http-route-with-attached-traffic-policy.yaml  example-svc-with-attached-backend-config-policy.yaml
hack/: bump_deps.sh  generate-release-notes.sh  generate.sh  run-e2e-test.sh  run-test.sh
internal/envoyinit/: Cargo.toml  Makefile  README.md
internal/envoyinit/patched-envoy-sdk/envoy-proxy-dynamic-modules-rust-sdk/dynamic_modules/: abi.h
internal/envoyinit/patched-envoy-sdk/envoy-proxy-dynamic-modules-rust-sdk/dynamic_modules/sdk/rust/src/: lib.rs
internal/envoyinit/pkg/downward/: downward.go  transform_test.go
internal/envoyinit/rustformations/: Cargo.toml
internal/envoyinit/rustformations/src/: http_simple_mutations.rs  lib.rs
internal/envoyinit/transformations/: Cargo.toml
internal/envoyinit/transformations/src/: jinja.rs  lib.rs
tools/: go.mod  go.sum
(+2619 files in other folders)
