[package]
name = "transformations"
version = "0.1.0"
edition = "2021"

[dependencies]
minijinja = "2.12.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_with = { version = "3.14", features = [
    "schemars_1",
    "macros",
    "alloc",
], default-features = false }
