[package]
name = "transformations"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
minijinja = "2.12.0"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_with = { version = "3.14", features = [
    "schemars_1",
    "macros",
    "alloc",
], default-features = false }
